# yahoo-fantasy-mcp

./: .env.example  .gitignore  .mcpbignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-17-mcpb-auth-error.md  2026-04-18-readme-restructure.md
docs/superpowers/specs/: 2026-04-17-mcpb-auth-error-design.md  2026-04-18-readme-restructure-design.md
src/yahoo_fantasy_mcp/: __init__.py  api.py  auth.py  server.py
tests/: test_api.py  test_auth.py  test_server.py
