[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yahoo-fantasy-mcp"
version = "0.3.0"
description = "Yahoo Fantasy Sports MCP server for roster management"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Matt Cable <github@curiousstranger.org>" }]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "yahoo-fantasy-api>=2.0.0",
    "yahoo-oauth>=2.0.0",
]

[project.scripts]
yahoo-fantasy-mcp = "yahoo_fantasy_mcp.server:main"
yahoo-fantasy-mcp-auth = "yahoo_fantasy_mcp.auth:run_initial_auth"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_fantasy_mcp"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "ANN",      # flake8-annotations
    "I",        # isort
    "D",        # pydocstyle
    "UP",       # pyupgrade
    "B",        # bugbear
    "C4",       # comprehensions
    "SIM",      # simplify
    "RUF",      # ruff-native
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S101", "RUF059"]  # no docstrings orannotations required, assert and not using all unpacked variables in tests is fine

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.11",
]
